// Copyright 2015, Google Inc.
// All rights reserved.
//
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions are
// met:
//
//     * Redistributions of source code must retain the above copyright
// notice, this list of conditions and the following disclaimer.
//     * Redistributions in binary form must reproduce the above
// copyright notice, this list of conditions and the following disclaimer
// in the documentation and/or other materials provided with the
// distribution.
//     * Neither the name of Google Inc. nor the names of its
// contributors may be used to endorse or promote products derived from
// this software without specific prior written permission.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

syntax = "proto3";

package opensds;

// The orchestration service definition.
service Orchestration {
  // Create a volume
  rpc CreateVolume (VolumeRequest) returns (Response) {}
  // Delete a volume
  rpc DeleteVolume (VolumeRequest) returns (Response) {}
  // Create a volume attachment
  rpc CreateVolumeAttachment (VolumeRequest) returns (Response) {}
  // Update a volume attachment
  rpc UpdateVolumeAttachment (VolumeRequest) returns (Response) {}
  // Delete a volume attachment
  rpc DeleteVolumeAttachment (VolumeRequest) returns (Response) {}
  // Create a volume snapshot
  rpc CreateVolumeSnapshot (VolumeRequest) returns (Response) {}
  // Delete a volume snapshot
  rpc DeleteVolumeSnapshot (VolumeRequest) returns (Response) {}
  // Create a share
  rpc CreateShare (ShareRequest) returns (Response) {}
  // Get a share
  rpc GetShare (ShareRequest) returns (Response) {}
  // List all shares
  rpc ListShares (ShareRequest) returns (Response) {}
  // Delete a share
  rpc DeleteShare (ShareRequest) returns (Response) {}
  // Attach a share
  rpc AttachShare (ShareRequest) returns (Response) {}
  // Detach a share
  rpc DetachShare (ShareRequest) returns (Response) {}
}

// The dock service definition.
service Dock {
  // Create a volume
  rpc CreateVolume (VolumeRequest) returns (Response) {}
  // Get a volume
  rpc GetVolume (VolumeRequest) returns (Response) {}
  // Delete a volume
  rpc DeleteVolume (VolumeRequest) returns (Response) {}
  // Create a volume attachment
  rpc CreateVolumeAttachment (VolumeRequest) returns (Response) {}
  // Update a volume attachment
  rpc UpdateVolumeAttachment (VolumeRequest) returns (Response) {}
  // Delete a volume attachment
  rpc DeleteVolumeAttachment (VolumeRequest) returns (Response) {}
  // Create a volume snapshot
  rpc CreateVolumeSnapshot (VolumeRequest) returns (Response) {}
  // Get a volume snapshot
  rpc GetVolumeSnapshot (VolumeRequest) returns (Response) {}
  // Delete a volume snapshot
  rpc DeleteVolumeSnapshot (VolumeRequest) returns (Response) {}
  // Create a share
  rpc CreateShare (ShareRequest) returns (Response) {}
  // Get a share
  rpc GetShare (ShareRequest) returns (Response) {}
  // List all shares
  rpc ListShares (ShareRequest) returns (Response) {}
  // Delete a share
  rpc DeleteShare (ShareRequest) returns (Response) {}
  // Attach a share
  rpc AttachShare (ShareRequest) returns (Response) {}
  // Detach a share
  rpc DetachShare (ShareRequest) returns (Response) {}
}

// The VolumeRequest message containing all properties of
// a volume request.
message VolumeRequest {
  string volumeId = 1;
  string volumeName = 2;
  int32 size = 3;
  string dockInfo = 4;
  string poolId = 5;
  string poolName = 6;
  string attachmentId = 7;
  bool doLocalAttach = 8;
  bool multiPath = 9;
  string hostInfo = 10;
  string mountpoint = 11;
  string snapshotId = 12;
  string snapshotName = 13;
  string snapshotDescription = 14;
  string storageProfile = 15;
}

// The ShareRequest message containing all properties of
// a share request.
message ShareRequest {
  string resourceType = 1;
  string id = 2;
  string name = 3;
  int32 size = 4;
  string shareType = 5;
  string shareProto = 6;
  bool allowDetails = 7;
  string device = 8;
  string mountDir = 9;
  string fsType = 10;
  string dockId = 11;
  string storageProfile = 12;
}

// The Response message containing all properties of
// resource response.
message Response {
  string status = 1;
  string message = 2;
  string error = 3;
}
